fix alignment

--- a/src/main/webapp/app/achievements/achievements.scss
+++ b/src/main/webapp/app/achievements/achievements.scss
@@ -2,6 +2,10 @@
     margin-top: 10px;
 }
 
+.achievement-table {
+    vertical-align: middle;
+}
+
 .circle {
     height: 30px;
     width: 30px;
